修改错别字

--- a/src/main/resources/并发编程之美/并发编程基础.md
+++ b/src/main/resources/并发编程之美/并发编程基础.md
@@ -146,7 +146,7 @@ synchronized (obj) {
 
 如果线程 A 在等待的过程中，其他线程调用调用了线程 A 的 `interrupt` 方法，则线程 A 会退出等待，并抛出 `InterruptedException` 异常。
 
-**notigy 函数** 
+**notify 函数** 
 
 一个线程调用共享对象的 notify() 方法后，会唤醒一个在该共享变量上调用 wait 系列
 方法后被挂起j的线程。一个共享变量上可能会有多个线程在等待，具体唤醒哪个等待的线
